bio and statement changed, fixed paralax bug on index mostly on mobile and tablets

--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ h3 {
 }
 .paralax1{
   background-image: url('assets/IMG_5403.JPG');
-  min-height: 100vh ;
+  min-height: 100% ;
 }
 .parlax2{
   background-image: url('assets/IMG_5724.JPG');
